[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/hud/Heart.png" type="Texture" id=1]
[ext_resource path="res://assets/hud/Golden Coin.png" type="Texture" id=2]
[ext_resource path="res://Scripts/LevelTimer.gd" type="Script" id=3]
[ext_resource path="res://Scripts/HUD.gd" type="Script" id=7]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 0.643929, 0.960938, 0.0788269, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 7 )

[node name="Stats" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_bottom = 44.0
alignment = 1

[node name="FrustoHeads" type="HBoxContainer" parent="Stats"]
margin_right = 250.0
margin_bottom = 44.0
rect_min_size = Vector2( 250, 0 )
size_flags_horizontal = 8

[node name="TextureRect" type="TextureRect" parent="Stats/FrustoHeads"]
margin_right = 32.0
margin_bottom = 44.0
texture = ExtResource( 1 )

[node name="TextureRect2" type="TextureRect" parent="Stats/FrustoHeads"]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 44.0
texture = ExtResource( 1 )

[node name="TextureRect3" type="TextureRect" parent="Stats/FrustoHeads"]
margin_left = 72.0
margin_right = 104.0
margin_bottom = 44.0
texture = ExtResource( 1 )

[node name="Control" type="Control" parent="Stats"]
margin_left = 650.0
margin_right = 950.0
margin_bottom = 44.0
rect_min_size = Vector2( 300, 40 )
size_flags_horizontal = 6
script = ExtResource( 3 )
minutes = 2
seconds = null

[node name="Min" type="Label" parent="Stats/Control"]
margin_left = -20.0
margin_right = 80.0
margin_bottom = 30.0
rect_min_size = Vector2( 100, 30 )
size_flags_horizontal = 6
text = "00"
align = 1
valign = 1

[node name="Sec" type="Label" parent="Stats/Control"]
margin_right = 100.0
margin_bottom = 30.0
rect_min_size = Vector2( 100, 30 )
size_flags_horizontal = 6
text = "00"
align = 1
valign = 1

[node name="dSec" type="Label" parent="Stats/Control"]
margin_left = 19.0
margin_right = 119.0
margin_bottom = 30.0
rect_min_size = Vector2( 100, 30 )
size_flags_horizontal = 6
text = "00"
align = 1
valign = 1

[node name="Timer" type="Timer" parent="Stats/Control"]
process_mode = 0
wait_time = 0.1
autostart = true

[node name="XP&Coins" type="VBoxContainer" parent="Stats"]
margin_left = 1350.0
margin_right = 1600.0
margin_bottom = 44.0
rect_min_size = Vector2( 250, 30 )

[node name="CoinsWrapper" type="HBoxContainer" parent="Stats/XP&Coins"]
margin_right = 250.0
margin_bottom = 20.0
rect_min_size = Vector2( 250, 20 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Stats/XP&Coins/CoinsWrapper"]
margin_right = 16.0
margin_bottom = 20.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 2 )
expand = true

[node name="#999" type="Label" parent="Stats/XP&Coins/CoinsWrapper"]
margin_left = 20.0
margin_top = 3.0
margin_right = 53.0
margin_bottom = 17.0
text = "#999"

[node name="XPWrapper" type="HBoxContainer" parent="Stats/XP&Coins"]
margin_top = 24.0
margin_right = 250.0
margin_bottom = 44.0
rect_min_size = Vector2( 250, 10 )
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2

[node name="XPBar" type="TextureProgress" parent="Stats/XP&Coins/XPWrapper"]
margin_right = 250.0
margin_bottom = 20.0
rect_min_size = Vector2( 250, 10 )
size_flags_horizontal = 5
size_flags_vertical = 5
value = 45.0
texture_progress = SubResource( 2 )
nine_patch_stretch = true

[node name="FrustoMeter" type="ProgressBar" parent="."]
margin_left = 13.0
margin_top = 256.0
margin_right = 213.0
margin_bottom = 276.0
rect_rotation = -90.0
value = 40.0

[node name="BooksPanel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -218.0
margin_right = 100.0
margin_bottom = -178.0
rect_min_size = Vector2( 200, 40 )

[node name="Wrapper" type="HBoxContainer" parent="BooksPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[connection signal="timeout" from="Stats/Control/Timer" to="Stats/Control" method="_on_Timer_timeout"]
